Changed the language for Save Record links.

--- a/local/languages/en.ini
+++ b/local/languages/en.ini
@@ -9,7 +9,7 @@ Add Tag = "Add Tag"
 Add Tags = "Add Tags"
 Add to another list = "Add to another list"
 Add to Book Bag = "Save Record"
-Add to favorites = "Save Record"
+Add to favorites = "Save to Account"
 Add your comment = "Add your comment"
 add_comment_fail_blank = "Comment cannot be blank."
 add_comment_success = "Comment added."
