--- a/local/languages/en.ini
+++ b/local/languages/en.ini
@@ -590,7 +590,7 @@ No Tags = "No Tags"
 no_description = "Description not available."
 no_items_selected = "No Items were Selected"
 nohit_filters = "Filters currently applied to this search:"
-nohit_heading = "No Results :-("
+nohit_heading = "No Results"
 nohit_no_filters = "No filters were applied to this search."
 nohit_parse_error = "There seems to be a problem with your search query.  Please check the syntax.  If you are not trying to use advanced features, putting the query inside double quotes may help."
 nohit_prefix = "Your search"
