Removed interface elements referring to dewey.

--- a/local/languages/en.ini
+++ b/local/languages/en.ini
@@ -121,7 +121,7 @@ browse_author = "Author"
 browse_dewey = "Call Number (Dewey)"
 browse_format = "Format"
 browse_journal = "Title"
-browse_lcc = "Call Number (LC)"
+browse_lcc = "Call Number"
 browse_publishDate = "Year of Publication"
 browse_series = "Title"
 browse_title = "Title"
