Post merge bug fixes.

--- a/languages/en.ini
+++ b/languages/en.ini
@@ -562,7 +562,7 @@ Library Card Deleted = "Library Card Deleted"
 Library Card Name = "Library Card Name"
 Library Cards = "Library Cards"
 Library Cards Disabled = "Library Cards Disabled"
-Library Catalog Password = "Library Catalog Password"
+Library Catalog Password = "Last name (lowercase)"
 Library Catalog Profile = "Library Catalog Profile"
 Library Catalog Record = "Library Catalog Record"
 Library Catalog Search = "Library Catalog Search"
@@ -620,7 +620,7 @@ Multiple Locations = "Multiple Locations"
 Musical Score = "Musical Score"
 My Favorites = "Favorites"
 My Fines = "Fines"
-My Holds = "Holds"
+My Holds = "Requested Items"
 My Profile = "Profile"
 Narrow Search = "Narrow Search"
 navigate_back = "Back"
@@ -745,7 +745,7 @@ Please upgrade your browser. = "Please upgrade your browser."
 Posted by = "Posted by"
 posted_on = "on"
 Preferences = "Preferences"
-Preferred Library = "Preferred Library"
+Preferred Library = "Preferred Recall Pickup Library"
 Prev = "Prev"
 Preview = "Preview"
 Preview from = "Preview from"
@@ -1060,7 +1060,7 @@ with_selected = "with selected"
 Year of Publication = "Year of Publication"
 Yesterday = "Yesterday"
 You do not have any fines = "You do not have any fines"
-You do not have any holds or recalls placed = "You do not have any holds or recalls placed"
+You do not have any holds or recalls placed = "You have no outstanding requests"
 You do not have any interlibrary loan requests placed = "You do not have any interlibrary loan requests placed"
 You do not have any items checked out = "You do not have any items checked out"
 You do not have any library cards = "You do not have any library cards"
@@ -1072,7 +1072,7 @@ Your book bag is empty = "Your book bag is empty"
 Your Checked Out Items = "Your Checked Out Items"
 Your Comment = "Your Comment"
 Your Favorites = "Saved Items"
-Your Fines = "Your Fines"
+Your Fines = "Fines"
 Your Holds and Recalls = "Your Holds and Recalls"
 Your Lists = "Your Lists"
 Your Profile = "Your Profile"
