Post merge bugfixes.

--- a/languages/en.ini
+++ b/languages/en.ini
@@ -460,7 +460,7 @@ Holdings at Other Libraries = "Holdings at Other Libraries"
 Holdings details from = "Holdings details from"
 Holdings_notes = "Notes"
 Holds = "Holds"
-Holds and Recalls = "Holds and Recalls"
+Holds and Recalls = "Requested Items"
 Home = "Home"
 home_browse = "Browse by"
 HTML Full Text = "HTML Full Text"
@@ -801,7 +801,7 @@ Related Items = "Related Items"
 Related Subjects = "Related Subjects"
 Remove Filters = "Remove Filters"
 Remove from Book Bag = "Remove from Book Bag"
-renew_all = "Renew All Items"
+renew_all = "Renew All"
 renew_determine_fail = "We were unable to determine if your item can be renewed. Please contact a member of staff."
 renew_empty_selection = "No items were selected"
 renew_error = "We were unable to renew your item(s) - Please contact a member of staff"
@@ -813,9 +813,9 @@ renew_item_no = "This item cannot be renewed"
 renew_item_overdue = "Item Overdue"
 renew_item_requested = "This item has been requested by another user"
 renew_select_box = "Renew Item"
-renew_selected = "Renew Selected Items"
+renew_selected = "Renew Selected"
 renew_success = "Renewal Successful"
-Renewed = "Renewed"
+Renewed = "Renewal Count"
 Request full text = "Request full text"
 request_in_transit = "In Transit to Pickup Location"
 request_place_text = "Place a Request"
@@ -1065,12 +1065,12 @@ You do not have any storage retrieval requests placed = "You do not have any sto
 You must be logged in first = "You must be logged in first"
 Your Account = "Your Account"
 Your book bag is empty = "Your book bag is empty"
-Your Checked Out Items = "Your Checked Out Items"
+Your Checked Out Items = "Checked Out Items"
 Your Comment = "Your Comment"
-Your Favorites = "Saved Items"
+Your Favorites = "My Favorites"
 Your Fines = "Fines"
-Your Holds and Recalls = "Your Holds and Recalls"
-Your Lists = "Your Lists"
+Your Holds and Recalls = "Requested Items"
+Your Lists = "Lists"
 Your Profile = "Your Profile"
 Your search terms = "Your search terms"
 Your Tags = "Your Tags"
