--- a/local/languages/en.ini
+++ b/local/languages/en.ini
@@ -7,7 +7,6 @@ access_denied = "Access denied."
 Accession Number = "Accession Number"
 Account = "Account"
 account_block_options_missing = "Some choices have been removed due to a block on your account. Details: %%details%%"
-Add = "Add"
 Add a Library Card = "Add a Library Card"
 Add a Note = "Add a Note"
 Add Tag = "Add Tag"
@@ -139,7 +138,7 @@ browse_publishDate = "Year of Publication"
 browse_series = "Title"
 browse_title = "Title"
 browse_topic = "Subject"
-bulk_email_success = "Your item(s) were e-mailed"
+bulk_email_success = "Your item(s) were emailed"
 bulk_email_title = "Library Catalog Items"
 bulk_error_missing = "Some data was missing. Your request was not successful."
 bulk_export_not_supported = "The record(s) you have selected do not support bulk export."
@@ -360,7 +359,7 @@ fav_delete_fail = "Sorry, an error has occurred. Your favorite(s) were not delet
 fav_delete_missing = "Some data was missing. Your favorite(s) were not deleted."
 fav_delete_success = "Your favorite(s) were deleted."
 fav_delete_warn = "You are about to delete these favorites from all your lists - If you want to delete favorites from a specific list only, please select the list before clicking delete."
-fav_email_fail = "Sorry, an error has occurred. Your favorite(s) were not e-mailed."
+fav_email_fail = "Sorry, an error has occurred. Your favorite(s) were not emailed."
 fav_email_missing = "Some data was missing. Your favorite(s) were not emailed."
 fav_email_success = "Your favorite(s) were emailed as requested."
 fav_export = "Export Favorites"
@@ -390,7 +389,6 @@ for search = "for search"
 Forgot Password = "Forgot Password"
 Form Submitted! = "Form Submitted!"
 Format = "Format"
-found = "found"
 From = "From"
 Full description = "Full description"
 Full text is not displayed to guests = "Full text is not displayed to guests."
@@ -450,6 +448,7 @@ hold_error_blocked = "You do not have sufficient privileges to place a hold on t
 hold_error_fail = "Your request failed. Please contact the circulation desk for further assistance"
 hold_invalid_pickup = "An invalid pick up location was entered. Please try again"
 hold_invalid_request_group = "An invalid hold request group was entered. Please try again"
+hold_items_available = "Cannot place a hold because items are available."
 hold_login = "for hold and recall information"
 hold_place = "Place Request"
 hold_place_fail_missing = "Your request failed. Some data was missing. Please contact the circulation desk for further assistance"
@@ -492,6 +491,7 @@ ill_request_pick_up_library = "Pick Up Library"
 ill_request_pick_up_location = "Pick Up Location"
 ill_request_place_fail_missing = "Your request failed. Some data was missing. Please contact the circulation desk for further assistance"
 ill_request_place_success = "Your request was successful"
+ill_request_place_success_html = "Your request was successful. <a href="%%url%%">Interlibrary Loan Requests</a>."
 ill_request_place_text = "Place an Interlibrary Loan Request"
 ill_request_processed = "Processed"
 ill_request_profile_html = "For interlibrary loan request information, please establish your <a href="%%url%%">Library Catalog Profile</a>."
@@ -504,7 +504,6 @@ ils_offline_login_message = "Your account details will be unavailable during thi
 ils_offline_status = "Our Library Management System is currently under maintenance."
 ils_offline_title = "System Under Maintenance"
 Import Record = "Import Record"
-Import to = "Import to "
 in = "in"
 In This Collection = "In This Collection"
 in_collection_label = "In collection:"
