Updates to the code for the new hold link.

--- a/local/languages/en.ini
+++ b/local/languages/en.ini
@@ -451,6 +451,7 @@ hold_invalid_request_group = "An invalid hold request group was entered. Please 
 hold_items_available = "Cannot place a hold because items are available."
 hold_login = "for hold and recall information"
 hold_place = "Place Request"
+hold_place_text = "Place a Hold Request"
 hold_place_fail_missing = "Your request failed. Some data was missing. Please contact the circulation desk for further assistance"
 hold_place_success_html = "Your request was successful. <a href="%%url%%">See Your Requested Items</a>."
 hold_profile_html = "For hold and recall information, please establish your <a href="%%url%%">Library Catalog Profile</a>."
@@ -822,7 +823,7 @@ renew_success = "Renewal Successful"
 Renewed = "Renewed"
 Request full text = "Request full text"
 request_in_transit = "In Transit to Pickup Location"
-request_place_text = "Place a Request"
+request_place_text = "Place a Recall Request"
 request_submit_text = "Submit Request"
 Requests = "Requests"
 Reserves = "Reserves"
