Added custom handling for various 7xx fields including the display of subfield a, customized to allow fields without a link to display.

--- a/local/languages/en.ini
+++ b/local/languages/en.ini
@@ -662,16 +662,16 @@ Not Illustrated = "Not Illustrated"
 Not On Reserve = "Not On Reserve"
 not_applicable = "n/a"
 Note = "Note"
-note_760 = "Main series"
-note_762 = "Subseries"
+note_760 = "Subseries of"
+note_762 = "Has subseries"
 note_765 = "Translation of"
-note_767 = "Translation"
+note_767 = "Translated as"
 note_770 = "Has supplement"
 note_772 = "Supplement to"
-note_773 = "Contained in"
-note_774 = "Constituent unit"
+note_773 = "Part of"
+note_774 = "Contains these parts"
 note_775 = "Other edition available"
-note_776 = "Additional form"
+note_776 = "Other form"
 note_777 = "Issued with"
 note_780_0 = "Continues"
 note_780_1 = "Continues in part"
@@ -690,7 +690,7 @@ note_785_5 = "Absorbed in part by"
 note_785_6 = "Split into"
 note_785_7 = "Merged with / Forms"
 note_785_8 = "Changed back to"
-note_787 = "Other relationship"
+note_787 = "Related title"
 Notes = "Notes"
 Number = "Number"
 number_decimal_point = "."
