Added logic for a page/hold request and updated the Can't Find It links to use it. Added special handling for law.

--- a/local/languages/en.ini
+++ b/local/languages/en.ini
@@ -271,6 +271,7 @@ Desired Username = "Desired Username"
 Detailed View = "Detailed View"
 Details = "Staff View"
 Displaying the top = "Displaying the top"
+dll_page_place_text = "Request items from the D'Angelo Law Library Storage Collections"
 Document Inspector = "Document Inspector"
 Document Type = "Document Type"
 DOI = "DOI"
@@ -716,6 +717,7 @@ Other Editions = "Other Editions"
 Other Libraries = "Other Libraries"
 Other Sources = "Other Sources"
 Page not found. = "Page not found."
+page_place_text = "Can't find it? Place a Search Request"
 Password = "Password"
 Password Again = "Password Again"
 Password cannot be blank = "Password cannot be blank"
@@ -823,7 +825,7 @@ renew_success = "Renewal Successful"
 Renewed = "Renewed"
 Request full text = "Request full text"
 request_in_transit = "In Transit to Pickup Location"
-request_place_text = "Place a Recall Request"
+request_place_text = "Place a Request"
 request_submit_text = "Submit Request"
 Requests = "Requests"
 Reserves = "Reserves"
