--- a/local/languages/en.ini
+++ b/local/languages/en.ini
@@ -7,6 +7,7 @@ access_denied = "Access denied."
 Accession Number = "Accession Number"
 Account = "Account"
 account_block_options_missing = "Some choices have been removed due to a block on your account. Details: %%details%%"
+account_has_alerts = "Your account has alerts"
 Add a Library Card = "Add a Library Card"
 Add a Note = "Add a Note"
 Add Tag = "Add Tag"
@@ -27,6 +28,7 @@ add_search_group = "Add Search Group"
 add_tag_error = "Error: Could Not Save Tags"
 add_tag_note = "Spaces will separate tags. Use quotes for multi-word tags."
 add_tag_success = "Tags Saved"
+add_to_favorites_html = "Add <em>%%title%%</em> to favorites"
 Address = "Address"
 adv_search_all = "All Fields"
 adv_search_author = "Author"
@@ -47,6 +49,7 @@ Advanced Search = "Advanced Search"
 advSearchError_noRights = "I'm sorry, but you don't have permission to edit that search. Perhaps your browser session has expired?"
 advSearchError_notAdvanced = "The search you have requested to edit is not an advanced search."
 advSearchError_notFound = "The search you have requested was not found."
+ajax_load_interrupted = "Loading interrupted"
 ajaxview_label_information = "Information"
 ajaxview_label_tools = "Tools"
 All = "All"
@@ -94,6 +97,7 @@ Back to Search Results = "Back to Search Results"
 Backtrace = "Backtrace"
 Bag = "Bag"
 Balance = "Balance"
+Barcode = "Barcode"
 basic_search_keep_filters = "Retain my current filters"
 Be the first to leave a comment = "Be the first to leave a comment"
 Be the first to tag this record = "Be the first to tag this record"
@@ -174,11 +178,18 @@ Catalog Results = "Catalog Results"
 catalog_login_desc = "Enter your library catalog credentials."
 CD = "CD"
 Change Password = "Change Password"
+channel_add_more = "Add more channels like this"
+channel_browse = "Browse more records"
+channel_expand = "Explore related channels"
+channel_explore = "Explore Channels"
+channel_search = "Show items as search results"
+channel_searchbox_label = "Search for more channels:"
 Check Hold = "Check Hold"
 Check Recall = "Check Recall"
 Checked Out = "Not Available"
 Checked Out Items = "Checked Out Items"
 Checkedout = "Checked Out"
+Checkout Date = "Checkout Date"
 Chicago Citation = "Chicago Style Citation"
 child_record_count = "%%count%% records"
 child_records = "Contents/pieces"
@@ -203,6 +214,7 @@ collection_disambiguation = "Found Multiple Matching Collections"
 collection_empty = "No items to display."
 collection_view_record = "View Record"
 Collections = "Collections"
+comment_anonymous_user = "Anonymous"
 comment_error_load = "Error: Could Not Redraw Comment List"
 comment_error_save = "Error: Could Not Save Comment"
 Comments = "Comments"
@@ -228,6 +240,7 @@ conjunction_or = "or"
 Contents = "Contents"
 Contributing Source = "Contributing Source"
 Contributors = "Contributors"
+Coordinates = "Coordinates"
 Copies = "Copies"
 Copy = "Copy"
 Copyright = "Copyright"
@@ -255,6 +268,11 @@ Days = "Days"
 Debug Information = "Debug Information"
 del_search = "Remove Search Group"
 Delete = "Delete"
+delete_account_confirm = "Are you sure you want to delete your account?"
+delete_account_description_html = "Saved searches and favorite lists will be deleted. You can still establish a new account later if you wish."
+delete_account_failure = "Failed to delete the account."
+delete_account_success_message = "Your account has been deleted. Logging out..."
+delete_account_title = "Delete Account"
 delete_all = "Delete All"
 delete_comment_failure = "Could not delete comment."
 delete_comment_success = "Comment deleted."
@@ -277,6 +295,8 @@ Document Type = "Document Type"
 DOI = "DOI"
 doi_detected_html = "Your search appears to contain a DOI. Click here to check the availability of the resource: <a href="%%url%%">%%doi%%</a>"
 Draw Search Box = "Draw Search Box"
+draw_searchbox_end = "Release mouse to finish drawing."
+draw_searchbox_start = "Click and drag to select an area."
 Due = "Due"
 Due Date = "Due Date"
 DVD = "DVD"
@@ -289,6 +309,7 @@ edit_list_fail = "Sorry, you are not permitted to edit this list"
 edit_list_success = "List successfully updated."
 Edition = "Edition"
 eds_expander_fulltext = "Also search within the full text of the articles"
+eds_expander_relatedsubjects = "Apply equivalent subjects"
 eds_expander_thesaurus = "Apply related words"
 eds_limiter_FC = "Catalog Only"
 eds_limiter_FC1 = "Institutional Repository Only"
@@ -347,12 +368,15 @@ export_refworks = "Start export to RefWorks"
 export_save = "Save File"
 export_selected = "Export Selected"
 export_selected_favorites = "Export Selected Favorites"
+export_send = "Send to %%service%%"
 export_success = "Export Complete"
 export_unsupported_format = "Unsupported Export Format"
 external_auth_heading = "Access to licensed material"
 external_auth_login_message = "Login to access licensed material"
 external_auth_unauthorized = "You are not authorized to access licensed material"
 external_auth_unauthorized_desc = "Your login method does not provide access to licensed material. Please log out and then log in using another method."
+facet_list_empty = "No data available"
+facet_list_for = "Facet list for %%field%%"
 FAQs = "FAQs"
 fav_delete = "Delete Selected Favorites"
 fav_delete_deleting = "Your favorite(s) are being deleted."
@@ -370,6 +394,8 @@ fav_list_delete_fail = "Sorry, an error has occurred. Your list was not deleted.
 Favorites = "Favorites"
 Fee = "Fee"
 Feedback = "Leave Feedback"
+feedback_email = "Email"
+feedback_login_required = "You must be logged in first."
 feedback_name = "Name"
 Field of activity = "Field of activity"
 File Description = "File Description"
@@ -381,6 +407,7 @@ Find More = "Find More"
 Find New Items = "Find New Items"
 Finding Aid = "Finding Aid"
 Fine = "Fine"
+Fine Date = "Fine Date"
 fine_limit_patron = "You have reached your fines limit and cannot renew items"
 Fines = "Fines"
 First = "First"
@@ -400,6 +427,7 @@ Geographic Search = "Geographic Search"
 Geographic Terms = "Geographic Terms"
 Geography = "Geography"
 Get full text = "Get full text"
+Get more information = "Get more information"
 Get RSS Feed = "Get RSS Feed"
 Globe = "Globe"
 Go = "Go"
@@ -436,6 +464,7 @@ history_saved_searches = "Your Saved Searches"
 history_search = "Search"
 history_time = "Time"
 hold_available = "Available for Pickup"
+hold_available_until = "Available for Pickup Until %%date%%"
 hold_cancel = "Cancel Hold"
 hold_cancel_all = "Cancel All Holds"
 hold_cancel_fail = "Your request was not canceled. Please contact the circulation desk for further assistance"
@@ -457,6 +486,7 @@ hold_place_fail_missing = "Your request failed. Some data was missing. Please co
 hold_place_success_html = "Your request was successful. <a href="%%url%%">See Your Requested Items</a>."
 hold_profile_html = "For hold and recall information, please establish your <a href="%%url%%">Library Catalog Profile</a>."
 hold_queue_position = "Request Position"
+hold_record_already_on_loan = "You already have the record on loan"
 hold_request_group = "Request from"
 hold_requested_group = "Requested from"
 hold_required_by = "No longer required after"
@@ -499,12 +529,15 @@ ill_request_processed = "Processed"
 ill_request_profile_html = "For interlibrary loan request information, please establish your <a href="%%url%%">Library Catalog Profile</a>."
 ill_request_submit_text = "Place Request"
 Illustrated = "Illustrated"
+ils_account_create_error = "Your account could not be created in our library management system. If the problem persists, please contact your library."
+ils_action_unavailable = "The requested function is not available with the active library card."
 ils_connection_failed = "Connection to the library management system failed. Information related to your library account cannot be displayed. If the problem persists, please contact your library."
 ils_offline_holdings_message = "Holdings and item availability information is currently unavailable. Please accept our apologies for any inconvenience this may cause and contact us for further assistance:"
 ils_offline_home_message = "Your account details and live item information will be unavailable during this time. Please accept our apologies for any inconvenience this may cause and contact us for further assistance:"
 ils_offline_login_message = "Your account details will be unavailable during this time. Please accept our apologies for any inconvenience this may cause and contact us for further assistance:"
 ils_offline_status = "Our Library Management System is currently under maintenance."
 ils_offline_title = "System Under Maintenance"
+ils_transaction_history_disabled = "Loan history is not enabled for the active library card."
 Import Record = "Import Record"
 in = "in"
 In This Collection = "In This Collection"
@@ -571,6 +604,7 @@ Library Catalog Search = "Library Catalog Search"
 Library Catalog Search Result = "Library Catalog Search Result"
 Library Catalog Username = "Library Catalog Username"
 Library Web Search = "Library Web Search"
+library_card_edit_password_placeholder = "New Password"
 lightbox_error = "Error: Cannot Load Popup Box"
 Limit To = "Limit To"
 List = "List"
@@ -579,6 +613,8 @@ list_access_denied = "You do not have permission to view this list."
 list_edit_name_required = "List name is required."
 load_tag_error = "Error: Could Not Load Tags"
 Loading = "Loading"
+Loan History = "Loan History"
+loan_history_empty = "You do not have any loans in the loan history."
 Local Login = "Local Login"
 local_login_desc = "Enter the username and password you created for this site."
 Located = "Located"
@@ -606,6 +642,7 @@ Message From Sender = "Message From Sender"
 Metadata Prefix = "Metadata Prefix"
 Microfilm = "Microfilm"
 MLA Citation = "MLA Citation"
+Mobile Number = "Mobile Number"
 mobile_link = "You appear to be on a mobile device; switch to mobile view?"
 Monograph Title = "Monograph Title"
 more = "more"
@@ -626,6 +663,7 @@ My Holds = "My Holds"
 My Profile = "My Profile"
 Narrow Search = "Narrow Search"
 navigate_back = "Back"
+nearby_items = "Items Near "%%title%%""
 Need Help? = "Need Help?"
 New Item Feed = "New Item Feed"
 New Item Search = "New Item Search"
@@ -634,6 +672,8 @@ New Items = "New Items"
 New Title = "New Title"
 new_password = "New Password"
 new_password_success = "Your password has successfully been changed"
+new_user_welcome_subject = "Your new account at %%library%%"
+new_user_welcome_text = "Welcome to %%library%%. A new account has been opened for %%firstname%% %%lastname%%. Your username is %%username%%. Please set a password on this page: %%url%%"
 Newspaper = "Newspaper"
 Next = "Next"
 No citations are available for this record = "No citations are available for this record"
@@ -651,6 +691,7 @@ nohit_active_filters = "One or more facet filters have been applied to this sear
 nohit_change_tab = "You have been searching in the "%%activeTab%%" tab. You may find something in one of the other tabs:"
 nohit_filters = "Filters currently applied to this search:"
 nohit_heading = "No Results"
+nohit_lookfor_html = "Your search - <strong>%%lookfor%%</strong> - did not match any resources."
 nohit_no_filters = "No filters were applied to this search."
 nohit_parse_error = "There seems to be a problem with your search query. Please check the syntax. If you are not trying to use advanced features, putting the query inside double quotes may help."
 nohit_prefix = "Your search"
@@ -706,6 +747,7 @@ on_reserve = "Reserves - Ask at Circulation"
 on_topic = "%%count%% item(s) on this topic"
 Online Access = "Online Access"
 online_resources = "Full Text"
+open_access_limit = "Limit to Open Access content"
 operator_contains = "contains"
 operator_exact = "is (exact)"
 OR = "OR"
@@ -732,6 +774,8 @@ Past = "Past"
 PDF Full Text = "PDF Full Text"
 peer_reviewed = "Peer Reviewed"
 peer_reviewed_limit = "Limit to articles from peer-reviewed journals"
+permission_denied = "You have requested a page or action, but you do not have the necessary permission."
+permission_denied_title = "Permission denied"
 Phone Number = "Phone Number"
 Photo = "Photo"
 Physical Description = "Physical Description"
@@ -784,6 +828,7 @@ Range slider = "Range slider"
 Read the full review online... = "Read the full review online..."
 Recall This = "Recall This"
 recaptcha_not_passed = "CAPTCHA not passed"
+recently_returned_channel_title = "Recently Returned"
 Record Citations = "Record Citations"
 Record Count = "Record Count"
 Record Type = "Record Type"
@@ -801,8 +846,17 @@ recovery_new_disabled = "You are not allowed to change your password at this tim
 recovery_title = "Password Recovery"
 recovery_too_soon = "Too many recovery requests have been made, please try again later"
 recovery_user_not_found = "We could not find your account"
+rectangle_center_message = "This is the center point for the highlighted rectangle"
 Refine Results = "Refine Results"
 Region = "Region"
+relais_available = "This item is available through Interlibrary Loan. Would you like to request it?"
+relais_checking = "Checking availability..."
+relais_error_html = "There was a problem with this request. Please request this item using the <a href="%%url%%" target='new'>Interlibrary Loan website</a>."
+relais_request = "Interlibrary Loan Request"
+relais_requesting = "Requesting..."
+relais_search = "Search Interlibrary Loan"
+relais_success_label = "Confirmation:"
+relais_success_message = "Request id #%%id%% was created. You will receive a confirmation email."
 Related Author = "Related Author"
 Related Items = "Related Items"
 Related Subjects = "Related Subjects"
@@ -815,9 +869,11 @@ renew_error = "We were unable to renew your item(s) - Please contact a member of
 renew_fail = "This item could not be renewed"
 renew_item = "Renew Item"
 renew_item_due = "Item due within the next 24 hours"
+renew_item_due_tooltip = "Items due soon"
 renew_item_limit = "This item has reached its renewal limit"
 renew_item_no = "This item cannot be renewed"
 renew_item_overdue = "Item Overdue"
+renew_item_overdue_tooltip = "Items overdue"
 renew_item_requested = "This item has been requested by another user"
 renew_select_box = "Renew Item"
 renew_selected = "Renew Selected Items"
@@ -831,12 +887,14 @@ Requests = "Requests"
 Reserves = "Reserves"
 Reserves Search = "Reserves Search"
 Reserves Search Results = "Reserves Search Results"
+result_checkbox_label = "Select result number %%number%%"
 result_count = "%%count%% results"
 Results = "Results"
 results = "results"
 Results for = "Results for"
 Results per page = "Results per page"
 Resumption Token = "Resumption Token"
+Return Date = "Return Date"
 Review by = "Review by"
 Reviews = "Reviews"
 Save = "Save"
@@ -864,6 +922,7 @@ search_match = "Match"
 search_NOT = "NO Terms"
 search_OR = "ANY Terms"
 search_save_success = "Search saved successfully."
+search_terms = "Search terms"
 search_unsave_success = "Saved search removed successfully."
 seconds_abbrev = "s"
 see all = "see all"
@@ -883,6 +942,12 @@ Serial = "Serial"
 Series = "Series"
 Set = "Set"
 Showing = "Showing"
+showing_items_html = "Showing <strong>%%start%% - %%end%%</strong> Items"
+showing_items_of_html = "Showing <strong>%%start%% - %%end%%</strong> of <strong>%%total%%</strong> Items"
+showing_results_for_html = "Showing <strong>%%start%% - %%end%%</strong> results for search '<strong>%%lookfor%%</strong>'"
+showing_results_html = "Showing <strong>%%start%% - %%end%%</strong> results"
+showing_results_of_for_html = "Showing <strong>%%start%% - %%end%%</strong> results of <strong>%%total%%</strong> for search '<strong>%%lookfor%%</strong>'"
+showing_results_of_html = "Showing <strong>%%start%% - %%end%%</strong> results of <strong>%%total%%</strong>"
 sidebar_close = "Collapse Sidebar"
 sidebar_expand = "Expand Sidebar"
 Similar Items = "Similar Items"
@@ -903,8 +968,14 @@ sort_author = "Author"
 sort_author_author = "Alphabetical"
 sort_author_relevance = "Popularity"
 sort_callnumber = "Call Number"
+sort_checkout_date_asc = "Checkout Date (oldest first)"
+sort_checkout_date_desc = "Checkout Date (newest first)"
 sort_count = "Result Count"
+sort_due_date_asc = "Due Date (oldest first)"
+sort_due_date_desc = "Due Date (newest first)"
 sort_relevance = "Relevance"
+sort_return_date_asc = "Return Date (oldest first)"
+sort_return_date_desc = "Return Date (newest first)"
 sort_title = "Title"
 sort_year = "Date Descending"
 sort_year asc = "Date Ascending"
@@ -1019,6 +1090,7 @@ total_tags = "Total Tags"
 total_users = "Total Users"
 Transliterated Title = "Transliterated Title"
 tree_search_limit_reached_html = "Your search returned too many results to display in the tree. Showing only the first <b>%%limit%%</b> items. For a full search click <a id="fullSearchLink" href="%%url%%" target="_blank">here.</a>"
+trending_items_channel_title = "Trending Items"
 unique_tags = "Unique Tags"
 University Library = "University Library"
 Unknown = "Unknown"
@@ -1038,6 +1110,7 @@ Video Clips = "Video Clips"
 Videos = "Videos"
 view already selected = "view already selected"
 View Book Bag = "View Book Bag"
+View Complete Issue = "View Complete Issue"
 View Full Collection = "View Full Collection"
 View Full Record = "View Full Record"
 View in EDS = "View in EDS"
@@ -1045,6 +1118,7 @@ View online: Full view Book Preview from the Hathi Trust = "View online: Full vi
 View Record = "View Record"
 View Records = "View Records"
 View this record in EBSCOhost = "View this record in EBSCOhost"
+view_already_selected = "%%current%% view already selected"
 visual_facet_parent = "From"
 Volume = "Volume"
 Volume Holdings = "Volume Holdings"
