--- a/local/languages/en.ini
+++ b/local/languages/en.ini
@@ -780,6 +780,7 @@ Phone Number = "Phone Number"
 Photo = "Photo"
 Physical Description = "Physical Description"
 Physical Object = "Physical Object"
+pick_up_at_reg_place_text = "Request for Pickup at Regenstein"
 pick_up_location = "Pickup Location"
 Place a Hold = "Place a Hold"
 Place of birth = "Place of birth"
